[gd_scene load_steps=2 format=3 uid="uid://cb124177j8aly"]

[ext_resource type="Script" path="res://addons/zalance/interface.gd" id="1_mn183"]

[node name="Interface" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.718
offset_bottom = 34.6
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.996269, 1)
script = ExtResource("1_mn183")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 2.00749
offset_top = 104.0
offset_right = 142.007
offset_bottom = 135.0
text = "Get Prices"

[node name="ProjectId" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 133.0
offset_top = 15.0
offset_right = 731.0
offset_bottom = 54.0
scale = Vector2(0.776368, 0.613043)

[node name="ProjectIdLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 1.0
offset_top = 15.0
offset_right = 126.0
offset_bottom = 39.0
text = "Project Id"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 50.0
offset_right = 126.0
offset_bottom = 74.0
text = "Live Mode"

[node name="LivemodeCheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 128.479
offset_top = 50.0
offset_right = 152.479
offset_bottom = 74.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="ProjectId" to="." method="_on_project_id_text_changed"]
[connection signal="pressed" from="LivemodeCheckBox" to="." method="_on_livemode_check_box_pressed"]
